# rule4ml

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  run-tests.yml
data_gen/: nn_gen.py  nn_synth.py  requirements.txt  utils.py
notebooks/: benchmark.ipynb  plots.ipynb  plots_bak.ipynb  train.ipynb  tutorial.ipynb
notebooks/models/: .gitignore  best_BRAM_MLP_config.json  best_DSP_MLP_config.json  best_LUT_MLP_config.json
rule4ml/: __init__.py
rule4ml/models/: architectures.py  callbacks.py  estimators.py  metrics.py  scaling.py  tuning.py  utils.py  wrappers.py
rule4ml/models/weights/: .gitignore  BRAM_MLP_config.json  CYCLES_MLP.weights.h5  CYCLES_MLP_config.json  DSP_MLP.weights.h5  FF_MLP.weights.h5  FF_MLP_config.json  LUT_MLP.weights.h5  LUT_MLP_config.json
rule4ml/models/weights/v1/mlp/: BRAM.config.json  BRAM.weights.h5  CYCLES.config.json  DSP.config.json  DSP.weights.h5  FF.config.json  LUT.config.json
rule4ml/models/weights/v2/gnn/: BRAM.config.json  BRAM.weights.pt  CYCLES.config.json  CYCLES.weights.pt  DSP.config.json  DSP.weights.pt  FF.config.json  FF.weights.pt  INTERVAL.config.json  INTERVAL.weights.pt  LUT.config.json  LUT.weights.pt
rule4ml/models/weights/v2/mlp/: BRAM.config.json  BRAM.weights.h5  CYCLES.config.json  CYCLES.weights.h5  DSP.config.json  FF.config.json  INTERVAL.config.json  (+2 more)
rule4ml/parsers/: data_parser.py  network_parser.py  supported_boards.json  utils.py
tests/: test_estimator.py  test_predictions.py
