[metadata]
name = rule4ml
description = Resource utilization and Latency Estimation for ML on FPGA
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = IMPETUS Team
author_email = impetus@usherbrooke.ca
license = GPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    pandas
    scikit-learn
    tensorflow>=2.15.1
    keras
    keras_tuner
    tqdm
python_requires = >=3.9
include_package_data = True

[options.extras_require]
dev =
    pre-commit
    pytest
    torch
    torch-geometric
    optuna
    onnx
datagen =
    hls4ml
    psutil
    py-cpuinfo
    pyparsing
    tensorflow==2.15.1
    tf-keras==2.15.1
